yaml/app-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: webapp
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: webapp
#   template:
#     metadata:
#       labels:
#         app: webapp
#     spec:
#       containers:
#       - name: webapp
#         image: nikhilsonawane2jpg/k8s-webapp:1.0
#         ports:
#         - containerPort: 3000
#         env:
#         - name: DB_HOST
#           valueFrom:
#             configMapKeyRef:
#               name: app-config
#               key: DB_HOST
#         - name: DB_USER
#           valueFrom:
#             configMapKeyRef:
#               name: app-config
#               key: DB_USER
#         - name: DB_NAME
#           valueFrom:
#             configMapKeyRef:
#               name: app-config
#               key: DB_NAME
#         - name: DB_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mysql-secret
#               key: MYSQL_ROOT_PASSWORD
#     livenessProbe:
#         httpGet:
#           path: /
#           port: 3000
#         initialDelaySeconds: 10
#         periodSeconds: 10

#     readinessProbe:
#         httpGet:
#           path: /
#           port: 3000
#         initialDelaySeconds: 5
#         periodSeconds: 5


# ---




# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp-service
# spec:
#   type: NodePort
#   selector:
#     app: webapp
#   ports:
#     - port: 3000
#       targetPort: 3000
#       nodePort: 30007



apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nikhilsonawane2jpg/k8s-webapp:1.0
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
