yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: myapp.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service
            port: 
              number: 3000
